updates + add services lib
Signed-off-by: Christhopher Lion <christhopherleao@icloud.com>

--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "@laugh-it-up/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx run laugh-it-up:serve:development"
+  },
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.10.6",
+    "@emotion/react": "11.11.1",
     "@emotion/server": "11.11.0",
-    "@emotion/styled": "11.10.6",
+    "@emotion/styled": "11.11.0",
     "@nx/next": "16.3.2",
-    "next": "13.4.1",
+    "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
@@ -24,28 +26,29 @@
     "@nx/workspace": "16.3.2",
     "@swc/plugin-emotion": "^2.5.67",
     "@testing-library/react": "14.0.0",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@types/jest": "^29.5.2",
+    "@types/node": "20.3.0",
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.58.0",
-    "babel-jest": "^29.4.1",
-    "cypress": "^12.11.0",
+    "babel-jest": "^29.5.0",
+    "cypress": "^12.14.0",
     "eslint": "~8.15.0",
-    "eslint-config-next": "13.4.1",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-config-next": "13.4.5",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-environment-node": "^29.4.1",
     "nx": "16.3.2",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.0.2"
+    "typescript": "~5.1.3"
   }
 }
