--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "@emotion/react": "11.11.1",
     "@emotion/server": "11.11.0",
     "@emotion/styled": "11.11.0",
+    "@hookform/error-message": "^2.0.1",
     "@nx/next": "16.3.2",
+    "framer-motion": "^10.12.16",
+    "libphonenumber-js": "^1.10.34",
     "next": "13.4.5",
     "react": "18.2.0",
+    "react-async-hook": "^4.0.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
