--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-async-hook": "^4.0.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-use": "^17.4.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
