--- a/package.json
+++ b/package.json
@@ -30,7 +30,14 @@
     "@nx/js": "16.3.2",
     "@nx/linter": "16.3.2",
     "@nx/react": "16.3.2",
+    "@nx/storybook": "16.3.2",
+    "@nx/web": "16.3.2",
+    "@nx/webpack": "^16.3.2",
     "@nx/workspace": "16.3.2",
+    "@storybook/addon-essentials": "^7.0.9",
+    "@storybook/core-server": "^7.0.9",
+    "@storybook/nextjs": "^7.0.21",
+    "@storybook/react-vite": "^7.0.9",
     "@swc/plugin-emotion": "^2.5.67",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.5.2",
@@ -56,6 +63,7 @@
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "vite": "^4.3.4"
   }
 }
